syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.example.models";

message Account {
  int32 accountNumber = 1;
  int32 amount = 2;
}

enum TransferStatus {
  FAILED = 0;
  SUCCESS = 1;
}

message TransferRequest {
  int32 from = 1;
  int32 to = 2;
  int32 amount = 3;
}

message TransferResponse {
  TransferStatus status = 1;
  repeated Account accounts = 2;
}

service TransferService {
  // bidirectional
  rpc transfer(stream TransferRequest) returns (stream TransferResponse);
}